Changed the CMake project structure, added .clang-format

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_executable(compiler compiler.cpp error.cpp lexer.cpp)
+add_subdirectory(common)
+add_subdirectory(lexer)
+
+add_executable(compiler compiler.cpp)
+target_link_libraries(compiler Common Lexer)
