Added the fmt library, errors are now displayed using fmt

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(Doctest INTERFACE)
 
 target_include_directories(Doctest INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/doctest)
+add_subdirectory(fmt)
