--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(Common STATIC error.cpp)
 
+target_link_libraries(Common PRIVATE fmt::fmt)
+
 target_include_directories(Common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
