--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(common)
 add_subdirectory(lexer)
+add_subdirectory(parser)
 
 add_executable(compiler compiler.cpp)
-target_link_libraries(compiler Common Lexer)
+target_link_libraries(compiler Common Lexer Parser)
