Wrote basic tests for parser

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,4 @@ function(create_test test_name source_file libs)
 endfunction()
 
 create_test(lexer_test lexer_test.cpp Lexer)
+create_test(parser_test parser_test.cpp Parser)
