--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(common)
 add_subdirectory(lexer)
 add_subdirectory(parser)
+add_subdirectory(emitter)
 
 add_executable(compiler compiler.cpp)
-target_link_libraries(compiler Common Lexer Parser)
+target_link_libraries(compiler Common Lexer Parser Emitter)
