Added a testable VM

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,15 @@
 set(TESTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/examples2023")
 
-function(create_test test_name source_file libs)
+function(create_test test_name source_file)
   add_executable(${test_name} ${source_file})
-  target_link_libraries(${test_name} Doctest Lexer ${libs})
+  target_link_libraries(${test_name} Doctest)
+  foreach(lib IN LISTS ARGN)
+    target_link_libraries(${test_name} ${lib})
+  endforeach()
   target_compile_definitions(${test_name} PRIVATE TESTS_DIR="${TESTS_DIR}")
   add_test(NAME ${test_name} COMMAND ${test_name})
 endfunction()
 
 create_test(lexer_test lexer_test.cpp Lexer)
-create_test(parser_test parser_test.cpp Parser)
+create_test(parser_test parser_test.cpp Lexer Parser)
+create_test(emitter_test emitter_test.cpp TestVM Lexer Parser Emitter)
