--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(common)
 add_subdirectory(lexer)
 add_subdirectory(parser)
 add_subdirectory(emitter)
+add_subdirectory(test_vm)
 
 add_executable(compiler compiler.cpp)
-target_link_libraries(compiler Common Lexer Parser Emitter)
+target_link_libraries(compiler Common Lexer Parser Emitter TestVM)
