--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,11 @@ option(ENABLE_TESTS "Enables tests" ON)
 if (ENABLE_TESTS)
     add_subdirectory(tests)
 endif()
+
+option(BUILD_DEBUGGER "Builds debugger" ON)
+if (BUILD_DEBUGGER)
+    add_subdirectory(debugger)
+endif()
 # option(ENABLE_EXAMPLES "Enables examples" ON)
 # if (ENABLE_EXAMPLES)
 #     add_subdirectory(examples)
