Decoupled ast and instructions from the current emitter and parser

--- a/debugger/CMakeLists.txt
+++ b/debugger/CMakeLists.txt
@@ -17,4 +17,4 @@ target_link_libraries(
   debugger
   PRIVATE ftxui::screen
   PRIVATE ftxui::dom
-  PRIVATE ftxui::component Emitter)
+  PRIVATE ftxui::component Common)
