--- a/src/vm/CMakeLists.txt
+++ b/src/vm/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(TestVM STATIC mw.cc)
 
-target_link_libraries(TestVM PUBLIC Common Emitter)
+target_link_libraries(TestVM PUBLIC Common)
 
 target_include_directories(TestVM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
