--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(Parser STATIC parser.cpp)
 
-target_link_libraries(Parser PUBLIC Common Lexer)
+target_link_libraries(Parser PUBLIC Common)
 
 target_include_directories(Parser PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
