More immediate representation generation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(analyzer)
 add_subdirectory(emitter)
 add_subdirectory(vm)
 add_subdirectory(vm-cln)
+add_subdirectory(ir)
 
 add_executable(compiler compiler.cpp)
 target_link_libraries(
