Further progress in IR

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_subdirectory(common)
+add_subdirectory(ir)
 add_subdirectory(lexer)
 add_subdirectory(parser)
 add_subdirectory(analyzer)
 add_subdirectory(emitter)
 add_subdirectory(vm)
 add_subdirectory(vm-cln)
-add_subdirectory(ir)
 
 add_executable(compiler compiler.cpp)
 target_link_libraries(
@@ -16,4 +16,5 @@ target_link_libraries(
   Emitter
   Analyzer
   TestVM
-  TestVMcln)
+  TestVMcln
+  Ir)
