--- a/src/ir/CMakeLists.txt
+++ b/src/ir/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Ir STATIC high_level_ir.cpp low_level_ir_builder.cpp
+add_library(Ir STATIC low_level_ir_builder.cpp high_level_ir.cpp low_level_ir.cpp
                       cfg_builder.cpp)
 
 target_link_libraries(Ir PUBLIC Common)
